# embedded-watering

./: Cargo.toml  Makefile  Readme  openocd.cfg
.cargo/: config
src/: main.rs
